@@ -1,3 +1,0 @@
-[Slideshow]
-width:700
-height:420
